--- a/ECM2434/Ecolution/templates/signup.html
+++ b/ECM2434/Ecolution/templates/signup.html
@@ -5,6 +5,7 @@
     <title>Sign Up - Ecolution</title>
 {% endblock %}
 
+<!-- Overrides header block so there isn't a navbar on this page -->
 {% block header %}
 {% endblock %}
 
