Revert "settings page attempt 2"
This reverts commit b76507982ca83c788e82452856a849e8ae2c9ce0.

--- a/ECM2434/Ecolution/templates/base.html
+++ b/ECM2434/Ecolution/templates/base.html
@@ -67,7 +67,7 @@
 
 <script>
     document.addEventListener("DOMContentLoaded", function () {
-        fetch("{% url 'settings' %}")  // Change 'get_fontsize' to 'settings'
+        fetch("{% url 'get_fontsize' %}")
             .then(response => response.json())
             .then(data => {
                 if (data.preferred_fontsize) {
