--- a/ECM2434/Ecolution/templates/home.html
+++ b/ECM2434/Ecolution/templates/home.html
@@ -19,7 +19,7 @@
         </div>
     </section>
 
-    <section class="spacer_big"></section>
+    <section class="spacer_large"></section>
     <section class="status_bar flex_h flex_center text_light">
         <div class="pet_status flex_v margin_sml flex_v_fill">
             <p>Pet Name: {{ pet_name }}     Level: {{ level }}</p>
