--- a/ECM2434/Ecolution/templates/settings.html
+++ b/ECM2434/Ecolution/templates/settings.html
@@ -89,7 +89,47 @@
 {% endblock %}
 
 {% block main %}
-    <div class="settings-container">
+    <section class="spacer_big"></section>
+    <section class="signup card flex_v flex_center box_shadow">
+        <h2 class="text_dark margin_sml_bot">Settings</h2>
+        <section class="menu card flex_v flex_v_fill">
+            <section class="spacer"></section>
+            <div class="user_info flex_h flex_center">
+                {% comment %} <img src="{% static 'images/profile.jpg' %}" alt="Profile Picture" class="profile-pic"> {% endcomment %}
+                <img src="{% static 'images/person.svg' %}" alt="Profile Picture" class="profile_pic box_shadow">
+                <h3>User Name</h3>
+            </div>
+            <section class="spacer"></section>
+            <div class="menu_container flex_v flex_v_fill">
+                <div class="slider-container flex_h flex_start button button_menu box_shadow" style="justify-content: start; gap: 8px;">
+                    <label for="font-size-slider">Font Size:</label>
+                    <input type="range" id="font-size-slider" min="1" max="5" value="{{ user.preferred_fontsize }}" class="slider">
+                    <span id="font-size-value">{{ user.preferred_fontsize }}</span>
+                </div>
+                <button class="button button_menu box_shadow" type="button" id="change-password-btn">Change Password</button>
+                <button class="button button_menu box_shadow" type="button" onclick="location.href='{% url 'delete_account' %}'">Delete Account</button>
+                <button class="button button_menu box_shadow" type="button" onclick="location.href='{% url 'login' %}'">Logout</button>
+            </div>
+        </section>
+
+        <div id="password-form">
+            <form id="change-password-form" method="POST" action="{% url 'change_password' %}">
+                {% csrf_token %}
+                <label for="current_password">Current Password:</label>
+                <input type="password" id="current_password" name="current_password" required><br>
+
+                <label for="new_password1">New Password:</label>
+                <input type="password" id="new_password1" name="new_password1" required><br>
+
+                <label for="new_password2">Confirm New Password:</label>
+                <input type="password" id="new_password2" name="new_password2" required><br>
+
+                <button type="submit">Update Password</button>
+            </form>
+        </div>
+    </section>
+
+    {% comment %} <div class="settings-container">
         <div class="header">
             <h2>Settings</h2>
         </div>
@@ -111,23 +151,7 @@
             <li onclick="location.href='{% url 'delete_account' %}'">Delete Account</li>
             <li class="logout" onclick="location.href='{% url 'login' %}'">Logout</li>
         </ul>
-
-        <div id="password-form">
-            <form id="change-password-form" method="POST" action="{% url 'change_password' %}">
-                {% csrf_token %}
-                <label for="current_password">Current Password:</label>
-                <input type="password" id="current_password" name="current_password" required><br>
-
-                <label for="new_password1">New Password:</label>
-                <input type="password" id="new_password1" name="new_password1" required><br>
-
-                <label for="new_password2">Confirm New Password:</label>
-                <input type="password" id="new_password2" name="new_password2" required><br>
-
-                <button type="submit">Update Password</button>
-            </form>
-        </div>
-    </div>
+    </div> {% endcomment %}
 {% endblock %}
 
 {% block script %}
