Home redirect to tasks

--- a/ECM2434/Ecolution/templates/home.html
+++ b/ECM2434/Ecolution/templates/home.html
@@ -38,7 +38,7 @@
                 <h2 class="text_light">Current Tasks</h2>
                 <p class="text_light">Select a task to view or edit details</p>
             </div>
-            <button class="button box_shadow text_light" type="button" onclick="toggleMenu()">View All</button>
+            <button class="button box_shadow text_light" type="button" onclick="window.location.href='{% url 'tasks' %}'">View All</button>
         </section>
         <section class="card_task card box_shadow text_light">
             <div class="content flex_h flex_fill_h flex_center flex_gap_std margin_sml">
