--- a/ECM2434/Ecolution/templates/signup.html
+++ b/ECM2434/Ecolution/templates/signup.html
@@ -47,7 +47,7 @@
             
             <label class="terms_checkbox">
                 <input type="checkbox" name="agree_terms" required>
-                <span>I have read and agree to the <a href="{% url 'term-of-use' %}" target="_blank">Terms and Conditions</a></span>
+                <span>I have read and agree to the <a href="{% url 'term_of_use' %}" target="_blank">Terms and Conditions</a></span>
             </label>            
             
             <button class="button box_shadow" type="submit">Sign Up</button>
