--- a/ECM2434/Ecolution/templates/term.html
+++ b/ECM2434/Ecolution/templates/term.html
@@ -82,8 +82,8 @@
             <div class="card downloads">
                 <p>You can also view them:</p>
                 <ul>
-                    <li><a href="{% static 'GDPR/T&C_Sprint_1_(PDF).pdf' %}">Terms and Conditions</a></li>
-                    <li><a href="{% static 'GDPR/PP_Sprint_1_(PDF).pdf' %}">Privacy Policy</a></li>
+                    <li><a href="{% static 'GDPR/T&C_Sprint_1_(PDF).pdf' %}" target="_blank">Terms and Conditions</a></li>
+                    <li><a href="{% static 'GDPR/PP_Sprint_1_(PDF).pdf' %}" target="_blank">Privacy Policy</a></li>
                 </ul>
 
             </div>
