--- a/ECM2434/Ecolution/templates/settings.html
+++ b/ECM2434/Ecolution/templates/settings.html
@@ -125,7 +125,7 @@
                 </form>
                 <button class="button button_menu box_shadow" type="button" onclick="location.href='{% url 'delete_account' %}'">Delete Account</button>
                 <button class="button button_menu box_shadow" type="button" onclick="location.href='{% url 'login' %}'">Logout</button>
-                <button class="button button_menu box_shadow" type="button" onclick="location.href='{% url 'term_of_use' %}'">Terms and Conditions</button>
+                <button class="button button_menu box_shadow" type="button" onclick="location.href='{% url 'term_of_use' %}'" target="_blank">Terms and Conditions</button>
             </div>
         </section>
 
